fix: responsive on tablet

--- a/styles/main.css
+++ b/styles/main.css
@@ -355,6 +355,7 @@ body {
   color: #5cb6f9;
   margin: 0px;
   padding: 32px;
+  text-align: center;
 }
 
 /* || ENDING */
